...
    <string name="name">Name: </string>
    <string name="name_hint">Input your name</string>
    <string name="ok">Ok</string>
    <string name="show_actionbar">Show actionbar</string>
    <string name="hide_actionbar">Hide actionbar</string>
    <string name="lock">Lock</string>
    <string name="key">Key</string>
    <string name="calendar">Calendar</string>
    <string name="rv_result">RecyclerView Result: %1$s</string>
    <string name="lv_result">ListView Result: %1$s</string>
    <string name="phone_hint">Input your phone</string>
    <string name="call">Call</string>
    <string name="pick_phone">Pick Phone Number</string>
...
